--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -162,9 +162,27 @@
       </div>
 
       <div class="field">
+        <label> Hacking Experience </label>
+        <input
+          type="text" ng-model="selectedUser.profile.hackerExperience" />
+      </div>
+
+      <div class="field">
         <label>What’s your background? What could you talk for hours about? Give us a snapshot of who you are and your journey in tech.</label>
         <input type="text"
                 ng-model="selectedUser.profile.background">
+      </div>
+
+      <div class="field">
+        <label> Tech Interests </label>
+        <input
+          type="text" ng-model="selectedUser.confirmation.techInterests" />
+      </div>
+
+      <div class="field">
+        <label> Did you attend any events hosted by HackBeanpot in Fall 2019? </label>
+        <input
+          type="text" ng-model="selectedUser.confirmation.hbpOutreachEvents" />
       </div>
 
       <div class="field">
